<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SwimmingPool">

    <EditText
        android:id="@+id/editTextReserveTennisHHDD"
        android:layout_width="145dp"
        android:layout_height="41dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="52dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/reserve2"
        android:inputType="text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="383dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/second"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextReserveTennisMMDD"
        android:layout_width="152dp"
        android:layout_height="41dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hintReserve1"
        android:inputType="text"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editTextReserveTennisHHDD"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/buttonReserveTennis"
        android:layout_width="251dp"
        android:layout_height="76dp"
        android:layout_marginTop="52dp"
        android:text="Reserve"
        android:textColor="#0C0C0C"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextReserveTennisMMDD" />

    <EditText
        android:id="@+id/editNameTennis"
        android:layout_width="335dp"
        android:layout_height="43dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.276"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editGradeTennis"
        android:layout_width="334dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/grade"
        android:inputType="text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNameTennis" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="338dp"
        android:layout_height="103dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.287"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editGradeTennis">

        <RadioButton
            android:id="@+id/radioFemaleTennis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Female" />

        <RadioButton
            android:id="@+id/radioMaleTennis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Male" />

    </RadioGroup>

    <TextView
        android:id="@+id/textViewTennisData"
        android:layout_width="280dp"
        android:layout_height="130dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonReserveTennis" />

</androidx.constraintlayout.widget.ConstraintLayout>