<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SwimmingPool">

    <EditText
        android:id="@+id/editTextReserveSwimmingHHDD"
        android:layout_width="145dp"
        android:layout_height="41dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/reserve2"
        android:inputType="text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.86"
        app:layout_constraintStart_toEndOf="@+id/editTextReserveSwimmingMMDD"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="383dp"
        android:layout_height="70dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/second"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.239"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextReserveSwimmingMMDD"
        android:layout_width="152dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hintReserve1"
        android:inputType="text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/buttonReserveSwimming"
        android:layout_width="251dp"
        android:layout_height="76dp"
        android:layout_marginTop="28dp"
        android:text="Reserve"
        android:textColor="#0C0C0C"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextReserveSwimmingMMDD" />

    <EditText
        android:id="@+id/editNameSwimming"
        android:layout_width="335dp"
        android:layout_height="43dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.268"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editGradeSwimming"
        android:layout_width="334dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/grade"
        android:inputType="text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.268"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNameSwimming" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="337dp"
        android:layout_height="94dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editGradeSwimming">

        <RadioButton
            android:id="@+id/radioMaleTennis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Male" />

        <RadioButton
            android:id="@+id/radioFemaleTennis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Female" />

    </RadioGroup>

    <ListView
        android:layout_width="352dp"
        android:id="@+id/List_Res"
        android:layout_height="125dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonReserveSwimming"
        app:layout_constraintVertical_bias="0.742" />


</androidx.constraintlayout.widget.ConstraintLayout>